stucked chart 1920*1080n fixed

--- a/assets/scss/_chart.scss
+++ b/assets/scss/_chart.scss
@@ -35,3 +35,44 @@
 //     display: none !important;
 //     width: 0 !important;
 // }
+
+
+@media screen and (min-width: 1850px) {
+    .apexcharts-inner.apexcharts-graphical{
+        transform: translate(13px, 0) scale(1.05);
+    }
+    .homepage{
+        & .manin_content_Body {
+            & .levelCard{
+                &.stackedChartCard {
+                    & .card-body{
+                        & .chartlable {
+                            margin: 2px 0px 0px 0px !important;
+                            height: calc(100% - 30px) !important;
+                            gap: 1.3%;
+                            & li {
+                                height: 8.1% !important;
+                                & .keyBtn {
+                                }
+                            }
+                        }
+                        & .stacked_chartGroup {
+                            &.above1000{
+                                & .chartlable {
+                                    gap: 1.3%;
+                                    & li {
+                                        height: 7.9% !important;
+                                        & .keyBtn {
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
+
